# slack-cli

./: Cargo.toml
.cargo/: config
http-resource/: Cargo.toml
http-resource/src/: http_resource_macro.rs  lib.rs
in-memory-ui/: Cargo.toml
in-memory-ui/src/: lib.rs  printer.rs  screen.rs
slack-data/: Cargo.toml
slack-data/src/: json_client.rs  lib.rs  response.rs  slack_client.rs  worker.rs
slack-http/: Cargo.toml
slack-http/src/: channel.rs  conversation.rs  error.rs  http_client.rs  json_client.rs  lib.rs  message.rs  response.rs  slack_client.rs  slack_state.rs  user.rs  worker.rs
slack-ui/: Cargo.toml
slack-ui/src/: conversations_list.rs  lib.rs  size.rs  worker.rs
slack-worker/: Cargo.toml
slack-worker/src/: lib.rs  message.rs  send_error.rs  subscriber.rs  worker.rs
src/: main.rs
src/http/: channel.rs  http_client.rs  json_client.rs  mod.rs  response.rs  slack_client.rs  user.rs
src/primitives/: from_action.rs  horizontal_line.rs  label.rs  mod.rs  rectangle.rs  vertical_line.rs  visual.rs
src/ui/: action.rs  atomic_action.rs  mod.rs  printer.rs  screen.rs  visual.rs
src/ui/primitives/: from_action.rs  horizontal_line.rs  label.rs  mod.rs  rectangle.rs  vertical_line.rs
terminal-ui/: Cargo.toml
terminal-ui/src/: lib.rs  printer.rs  screen.rs
ui/: Cargo.toml
ui-abstract/: Cargo.toml
ui-abstract/src/: atomic_action.rs  lib.rs  point.rs  screen.rs  visual.rs
ui-in-memory/: Cargo.toml
ui-in-memory/src/: lib.rs  printer.rs  screen.rs
ui-primitives/: Cargo.toml
ui-primitives/src/: fixed_width_label.rs  from_action.rs  horizontal_line.rs  label.rs  lib.rs  printer.rs  rectangle.rs  screen.rs  vertical_line.rs
ui-terminal/: Cargo.toml
ui-terminal/src/: lib.rs  printer.rs  screen.rs  screen_size.rs
ui/src/: lib.rs  point.rs  printer.rs  screen.rs
