[workspace]
members = [
    "slack-http",
    "ui-primitives",
    "ui",
    "terminal-ui",
    "in-memory-ui",
]

[package]
name = "slack-cli"
version = "0.1.0"
authors = ["Ilya Bylich <ibylich@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack-http = { path = "slack-http" }
ui-primitives = { path = "ui-primitives" }
ui = { path = "ui" }
terminal-ui = { path = "terminal-ui" }
in-memory-ui = { path = "in-memory-ui" }
