[workspace]
members = [
    "ui-abstract",
    "ui-primitives",
    "ui-terminal",
    "ui-in-memory",
    "http-resource",
    "slack-worker",
    "slack-data",
    "slack-ui",
]

[package]
name = "slack-cli"
version = "0.1.0"
authors = ["Ilya Bylich <ibylich@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui-abstract = { path = "ui-abstract" }
ui-primitives = { path = "ui-primitives" }
ui-terminal = { path = "ui-terminal" }
ui-in-memory = { path = "ui-in-memory" }
http-resource = { path = "http-resource" }
slack-worker = { path = "slack-worker" }
slack-data = { path = "slack-data" }
slack-ui = { path = "slack-ui" }
