[package]
name = "http-resource"
version = "0.1.0"
authors = ["Ilya Bylich <ibylich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.33", features = ["extra-traits"] }
proc-macro2 = "1.0.18"
quote = "1.0.7"


[lib]
proc-macro = true
