[package]
name = "slack-http"
version = "0.1.0"
authors = ["Ilya Bylich <ibylich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
reqwest = { version = "0.10.6", features = ["blocking"] }
http-resource = { path = "../http-resource" }
slack-worker = { path = "../slack-worker" }
