[package]
name = "slack-ui"
version = "0.1.0"
authors = ["Ilya Bylich <ibylich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack-worker = { path = "../slack-worker" }
slack-data = { path = "../slack-data" }
ui-terminal = { path = "../ui-terminal" }
ui-primitives = { path = "../ui-primitives" }
ui-abstract = { path = "../ui-abstract" }
